; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_shared.c_round_up_multiple_64.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_shared.c_round_up_multiple_64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @round_up_multiple_64(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  store i64 %10, i64* %3, align 8
  br label %25

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = srem i64 %12, %13
  store i64 %14, i64* %6, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load i64, i64* %4, align 8
  store i64 %18, i64* %3, align 8
  br label %25

19:                                               ; preds = %11
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i64, i64* %6, align 8
  %24 = sub nsw i64 %22, %23
  store i64 %24, i64* %3, align 8
  br label %25

25:                                               ; preds = %19, %17, %9
  %26 = load i64, i64* %3, align 8
  ret i64 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
